--- a/HowLong/HowLong/Resources/Resource.resx
+++ b/HowLong/HowLong/Resources/Resource.resx
@@ -171,6 +171,12 @@
   <data name="DayEndedTitle" xml:space="preserve">
     <value>Day is over!</value>
   </data>
+  <data name="DayExistText" xml:space="preserve">
+    <value>An accounting day with this calendar number was previously added to the system. Are you sure you want to add a new one?</value>
+  </data>
+  <data name="DayExistTitle" xml:space="preserve">
+    <value>Day exists</value>
+  </data>
   <data name="DayIsOverText" xml:space="preserve">
     <value>Congratulations, you have successfully fulfilled the working norm of the current day👏</value>
   </data>
@@ -297,6 +303,9 @@
   <data name="MessageToSupport" xml:space="preserve">
     <value>Message to support</value>
   </data>
+  <data name="MissedDayAction" xml:space="preserve">
+    <value>Missed day</value>
+  </data>
   <data name="MondayShortText" xml:space="preserve">
     <value>Mon</value>
   </data>
@@ -365,6 +374,9 @@
   </data>
   <data name="SelectAction" xml:space="preserve">
     <value>Select the action</value>
+  </data>
+  <data name="SelectDayAction" xml:space="preserve">
+    <value>Сhoose a day type</value>
   </data>
   <data name="SelectedDayText" xml:space="preserve">
     <value>Selected day:</value>
@@ -435,6 +447,9 @@
   <data name="WednesdayText" xml:space="preserve">
     <value>Wednesday</value>
   </data>
+  <data name="WeekdayAction" xml:space="preserve">
+    <value>Weekday</value>
+  </data>
   <data name="WeekdaysButton" xml:space="preserve">
     <value>Weekdays</value>
   </data>
@@ -443,6 +458,9 @@
   </data>
   <data name="WeekdayText" xml:space="preserve">
     <value>Weekday</value>
+  </data>
+  <data name="WeekendAction" xml:space="preserve">
+    <value>Weekend</value>
   </data>
   <data name="WeekendAlertText" xml:space="preserve">
     <value>Are you sure you want to go to work on the weekend? The time worked today will be reflected in the quality of processing</value>
@@ -461,6 +479,9 @@
   </data>
   <data name="WorkText" xml:space="preserve">
     <value>Work: </value>
+  </data>
+  <data name="YesAddDayText" xml:space="preserve">
+    <value>Yes, add</value>
   </data>
   <data name="YesClearHistoryText" xml:space="preserve">
     <value>Yes, clear</value>
